# beu

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  REPO_LAYOUT.md  SPEC.md  agent-state.schema.json  package-lock.json  package.json  state-delta.schema.json  tsconfig.json
.agents/plugins/: marketplace.json
.github/: copilot-instructions.md
compressor/: SKILL.md
compressor/references/: codex_compressor_runner.py  compile_leder_frames.py  compressor-prompt.txt  copilot_compressor_runner.py  eval.json  install_copilot_compressor.py  install_scheduled_compressor.py
durable-ledger/: SKILL.md
hermes-adapter/: __init__.py  _shared.py  beu.yaml.example  config.py  hooks.py  plugin.py  plugin.yaml  process.py  tools.py
hermes-adapter/tests/: test_beu_embeddings.py
openclaw-adapter/: beu-process.ts  flush-plan.ts  index.ts  openclaw.plugin.json  package-lock.json  package.json  prompt-section.ts
openclaw-adapter/tools/: distill.ts  recall.ts
plugins/beu/: .mcp.json  README.md  beu-mcp.js  beu-mcp.ts
plugins/beu-codex/: .mcp.json  README.md  beu-mcp.js
plugins/beu-copilot-cli/: .mcp.json  hooks.json  plugin.json
plugins/beu-hermes/: __init__.py  plugin.yaml  schemas.py  tools.py
plugins/beu-opencode/: README.md  package.json
plugins/durable-ledger/: README.md  hooks.json
sanity-orientation/: SKILL.md
sanity-orientation/references/: durable-ledger-signals.md  harness-signals.md
scripts/: check-boundaries.sh  install-hermes-adapter.zsh
src/: beu-mcp.ts  beu-state.ts  compute-agent-state.ts  lib.rs  main.rs  observability.rs
src/protocol/: distill.rs  distill_tick.rs  index.rs  ledger.rs  mod.rs  recall.rs  shared.rs  status.rs  wait.rs
src/storage/: ledger.rs  migrations.rs  mod.rs
src/types/: ledger.rs  mod.rs  protocol.rs
test/: beu-state.test.mjs  compute-agent-state.test.js
tests/: protocol_distill.rs  protocol_recall.rs  protocol_stream.rs  protocol_vector_search.rs  storage_recall.rs
tests/e2e/: AGENTS.md  hermes_adapter_contract.rs  hermes_adapter_integration.rs  hermes_adapter_loader.rs  (+3 more)
(+32 files in other folders)
