[package]
name = "beu"
version = "0.1.0"
edition = "2021"

[features]
default = []
integration = []

[dependencies]
libsql = { version = "0.6", default-features = false, features = ["core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
aisdk = { version = "0.5.2", features = ["openai", "openaicompatible", "google", "mistral", "openrouter"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "beu"
path = "src/lib.rs"

[[bin]]
name = "beu"
path = "src/main.rs"

[[test]]
name = "hermes_adapter_loader"
path = "tests/e2e/hermes_adapter_loader.rs"

[[test]]
name = "hermes_adapter_contract"
path = "tests/e2e/hermes_adapter_contract.rs"

[[test]]
name = "openclaw_adapter"
path = "tests/e2e/openclaw_adapter.rs"

[[test]]
name = "protocol_vector_search"
path = "tests/protocol_vector_search.rs"
